# Humanoid-Robotics-Project-Dangerous-Goods-Handling-Robot

./: .gitignore  .gitmodules  README.md  graspit_test.py  test2.py  topics.txt
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/fetch_control/: CanSeeCube.h  CanSeeCubeRequest.h  CanSeeCubeResponse.h
devel/include/graspit_interface/: ApproachToContactRequest.h  ApproachToContactResponse.h  AutoGraspRequest.h  AutoGraspResponse.h  AutoOpenRequest.h  AutoOpenResponse.h  Body.h  CheckGraspReachabilityAction.h  CheckGraspReachabilityActionFeedback.h  CheckGraspReachabilityActionGoal.h  CheckGraspReachabilityActionResult.h  CheckGraspReachabilityFeedback.h  CheckGraspReachabilityGoal.h  CheckGraspReachabilityResult.h  ClearWorldRequest.h  ClearWorldResponse.h  ComputeQualityRequest.h  ComputeQualityResponse.h  DynamicAutoGraspCompleteRequest.h  DynamicAutoGraspCompleteResponse.h  Energy.h  FindInitialContactRequest.h  FindInitialContactResponse.h  ForceRobotDOFRequest.h  ForceRobotDOFResponse.h  GetBodiesRequest.h  GetBodiesResponse.h  GetBodyRequest.h  GetBodyResponse.h  GetDynamicsRequest.h  GetDynamicsResponse.h  GetGraspableBodiesRequest.h  (+62 more)
install/: .rosinstall  setup.sh
src/fetch_control/: CMakeLists.txt  package.xml
src/fetch_gazebo/fetch_gazebo_demo2/: CMakeLists.txt  package.xml
src/fetch_gazebo/fetch_gazebo_demo2/launch/: demo.launch
src/fetch_gazebo/fetch_gazebo_demo2/scripts/: .demo.py.swp  demo.py  pointcloud.cpp  test2.py
src/pr2_launch/: CMakeLists.txt  package.xml
src/world_manager_experiment/: CMakeLists.txt  package.xml
(+497 files in other folders)
